--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ header{
     text-align: center;
     a{
       margin: 0 .2rem;
-      color: $black1;
+      color: $bg1;
     }
     background: $theme;
     padding: 0.1rem;
