--- a/a/elementalcss/0-9/elemental.scss
+++ b/a/elementalcss/0-9/elemental.scss
@@ -1224,7 +1224,7 @@ img[align=left] {
   @include section;
   position: fixed;
   right: 0;
-  bottom: 100px;
+  bottom: 50px;
   background: $bg1;
   padding: 1rem;
   border-radius: $radius2 0 0 $radius2;
@@ -1254,6 +1254,9 @@ img[align=left] {
   section{
     display: none;
     margin-left: 0 1rem;
+    label{
+      color: $fg2;
+    }
   }
   &:focus-within {
     border-color: $bg1;
